services/stalwart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email
spec:
  selector:
    app: email
  ports:
    - protocol: TCP
      port: 25
      name: smtp
    - protocol: TCP
      port: 465
      name: smtps
    - protocol: TCP
      port: 993
      name: imaps
    - protocol: TCP
      port: 8080
      name: http
  ipFamilies:
     - IPv4
  type: ClusterIP
