services/stalwart/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: email-smtp-465
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: email-smtp-465
  proxyProtocol:
    version: V2
