services/stalwart/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email
  labels:
    app: email
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
      - key: "kubernetes.io/hostname"
        operator: "Equal"
        value: "mail"
      securityContext:
        fsGroup: 65534
      containers:
      - name: mail
        image: stalwartlabs/stalwart:latest 
        imagePullPolicy: Always
        volumeMounts:
        - name: mail-data
          mountPath: /opt/stalwart
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: 8080
            httpHeaders:
            - name: X-Forwarded-For
              value: 127.0.0.1
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8080
            httpHeaders:
            - name: X-Forwarded-For
              value: 127.0.0.1
          initialDelaySeconds: 5
          periodSeconds: 10  
      volumes:
      - name: mail-data
        persistentVolumeClaim:
          claimName: mail-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: email
spec:
  selector:
    app: email
  ports:
    - protocol: TCP
      port: 8080
      name: http
    - protocol: TCP
      port: 993
      name: imaps
  ipFamilyPolicy: RequireDualStack
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - mail.erebe.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: email
          port: 8080

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: email-imaps
spec:
  parentRefs:
    - name: envoy
      sectionName: imaps-listener
  rules:
    - backendRefs:
      - name: email
        port: 993

---
# 3. BackendTrafficPolicy to enable Proxy Protocol v2 toward upstream
#apiVersion: gateway.envoyproxy.io/v1alpha1
#kind: BackendTrafficPolicy
#metadata:
#  name: email-upstream
#  namespace: default
#spec:
#  targetRefs:
#    - group: gateway.networking.k8s.io
#      kind: TCPRoute
#      name: email-imaps
#  proxyProtocol:
#    version: V2  # or V1
