services/stalwart/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - mail.erebe.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: email
          port: 8080
